--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Formulário de cadastro</h1>
     <form>
-        <label for="name">Nome</label>
-        <input id="name" type="name" />
+        <label for="text">Nome</label>
+        <input id="text" type="text" />
         <br />
         <label for="email">E-mail</label>
         <input id="email" type="email" />
@@ -17,8 +17,8 @@
         <label for="senha">Senha</label>
         <input id="senha" type="password" />
         <br />
-        <button>
-            Cadastrar
+        <button type="submit">
+            Cadasrar
         </button>
     </form>
 
